Converted all branding to "Helm" Added support for imports without extension Changed file extensions to .helm from .odin Added support for procs without the `proc` keyword. Added a @(calling_convention) property for functions

--- a/.gitignore
+++ b/.gitignore
@@ -261,13 +261,20 @@ bin/
 *.pdb
 
 # - Linux/MacOS
-odin
-odin.dSYM
+helm
+helm.dSYM
 
 
 # shared collection
 shared/
 
 # temp files
-* .ll
+*.ll
 *.bc
+
+examples/demo
+examples/demo.exe
+examples/factorial
+examples/factorial.exe
+examples/hello
+examples/hello.exe
