--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,18 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "lldb"
-        }
+        },
+        {
+            "name": "(lldb) Odin Demo",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/helm",
+            "args": ["run", "examples/ported_odin_demo.helm"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "lldb"
+        },
     ]
 }
